--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="#one" class="active">Welcome</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#three">Projects</a></li>
-						<li><a href="images/Resume GSkelley.pdf">Resume</a></li>
+						<li><a href="https://www.dropbox.com/s/aak7hik4mwzeh9s/Resume%20GSkelley.pdf?dl=0">Resume</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
