--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 								<div class="container">
 									<h3>Contact Me</h3>
 									<p align="justify">If you have any questions or interested to learn more about my work background, please send me a message and I will response as soon as possible.</p>
-									<form method="post" action="mailto:graceskelley.com">
+									<form method="post" action="https://formsubmit.co/graceskelley@gmail.com">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
