--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
+					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst</p>
 				</header>
