--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
-					<p>Business Intelligence Analyst</p>
+					<p>Business Intelligence Analyst<br /></p>
 				</header>
 				<nav id="nav">
 					<ul>
