--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p></p>									
+									<p>For a complete and detailed anaylsis presentation, it is recommended to select <b>"View the Full Report Below"</b> links provided when visiting each of the case study excerpts.</p>									
 									<div class="features">
 										<article>
 											<a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Instacart.jpg" alt="" /></a>
