--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/me.JPG" alt="" /></span>
+					<span class="image avatar"><img src="images/me.jpg" alt="me" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br /></p>
 				</header>
@@ -125,6 +125,12 @@
 									<h3>Contact Me</h3>
 									<p align="justify">If you have any questions or interested to learn more about my work background, please send me a message and I will response as soon as possible.</p>
 									<form method="post" action="https://formsubmit.co/5bc60e93b10e28d1cd31d0a04af144ed">
+										<!-- Honeypot -->
+										<input type="test" name="_honey" style="display: none;">
+										
+										<!-- Disable Captcha  -->
+										<input type="hidden" name="_captcha" value="false">
+										
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" required /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" required /></div>
