--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Grace Skelley | Business Intelligence Analyst</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/me.JPG" alt="me" /></span>
+					<span class="image avatar"><img src="images/me.jpg" alt="me" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br /></p>
 				</header>
