--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Grace Skelley | Business Intelligence Analyst</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -18,7 +18,8 @@
 				<header>
 					<span class="image avatar"><img src="images/me.JPG" alt="me" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
-					<p>Business Intelligence Analyst<br /></p>
+					<p>Business Intelligence Analyst<br />
+					 </p>
 				</header>
 				<nav id="nav">
 					<ul>
