--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Grace Skelley | Business Intelligence Analyst</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -74,7 +74,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p align="justify">For a complete and detailed anaylsis presentation, it is recommended to select <b>"View the Full Report Below"</b> links provided when visiting each of the case study excerpts.</p>									
+									<p align="justify">For a complete and detailed anaylsis presentation, it is recommended to select <b><i>"View the Full Report Below"</i></b> links provided when visiting each of the case study excerpts.</p>									
 									<div class="features">
 										<article>
 											<a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Instacart.jpg" alt="" /></a>
