--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Grace Skelley | Business Intelligence Analyst</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="https://github.com/gskelley/gskelley.github.io/blob/main/assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
 
