--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<header class="major">
 										<h2>Welcome to my Portfolio</h2>
 									</header>
-									<p align="justify">I am delighted to present to you a compilation of my work demonstrating my skills in data analysis, interpretation, and the best part of all, visualization.</p>
+									<p align="justify">I am delighted to present my project compilation, demonstrating my skills in data analysis, interpretation, and the best part of all, visualization.</p>
 									<p align="justify">Thank you for taking a moment to view some of my accomplishments and I hope you like it .</p>
 								</div>
 							</section>
@@ -124,7 +124,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p align="justify">If you have any questions or interested to learn more about my work background, please send me a message and I will response as soon as possible.</p>
+									<p align="justify">For questions or any additional inquiries about my work background, please send me a message and I will response back to you as soon as I can.</p>
 									<form method="post" action="https://formsubmit.co/5bc60e93b10e28d1cd31d0a04af144ed">
 										<!-- Honeypot -->
 										<input type="test" name="_honey" style="display: none;">
