--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Welcome</a></li>
+						<ul>
+						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#three">Projects</a></li>
-						<li><a href="https://www.dropbox.com/s/aak7hik4mwzeh9s/Resume%20GSkelley.pdf?dl=0">Resume</a></li>
 						<li><a href="#four">Contact</a></li>
+					</ul>
 					</ul>
 				</nav>
 				<footer>
