--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p align="justify">For questions or any additional inquiries about my work background, please send me a message and I will response back to you as soon as I can.</p>
+									<p align="justify">For questions or opportunities to be part of your team, please send me a message and I will respond back to you as soon as I can.</p>
 									<form method="post" action="https://formsubmit.co/5bc60e93b10e28d1cd31d0a04af144ed">
 										<!-- Honeypot -->
 										<input type="test" name="_honey" style="display: none;">
