--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									<p align="justify"><i>Currently, I'm available for a full-time position either local or remote.</i></p> 
 									<ul> 
 									<a href="images/Resume GSkelley.pdf" download>
-									<button type="button" class="button" data-download="download">Download Resume</button>
+									<button type="button" class="button" data-download="download">Download Resume</button></a>
 									</ul>	
 								</div>
 							</section>
