--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="" alt="" /></span>
+					<span class="image avatar"><img src="images/me.JPG" alt="me" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br />
 					 </p>
@@ -55,7 +55,6 @@
 									</header>
 									<p>I am delighted to present my project compilation, demonstrating my skills in data analysis, interpretation, and the best part of all, visualization.<br />
 										</a></p>
-									</header>
 									<p>Thank you for taking a moment to view some of my accomplishments and I hope you like it.</p>
 								</div>
 							</section>
@@ -66,13 +65,13 @@
 									<h3>About Me</h3>
 									<p align="justify"><i>Hello! I'm Grace Skelley, a business intelligence analyst based in Northern California.</i></p>
 									<p align="justify"><i>My obsession with innovative solutions will benefit both the individual as well as the organization as a whole. I am also a firm believer that change is constant and with it comes challenges that present unlimited possibilities.</i></p>
-									<p align="justify"><i>In my years of experience in operations, I have come to realize that working with numbers is like solving mystery puzzle games. Figuring out what the root cause is and understanding its impact make it easy to determine the next steps. It became clear to me, that committing to <b>full-time data analytics training from <a href="https://www.forbes.com/advisor/business/best-data-analytics-certifications/">CareerFoundry</a> to supplement my marketing degree</b> would be a perfect career enhancement where I see myself excelling. Applying mathematical calculations and performing extended research studies to feed one’s curiosity deepens my desire to gain knowledge.</i></p>
+									<p align="justify"><i>In my years of experience in operations, I have come to realize that working with numbers is like solving mystery puzzle games. Figuring out what the root cause is and understanding its impact make it easy to determine the next steps. It became clear to me, that committing to <b>full-time data analytics training from <a href="https://www.forbes.com/advisor/business/best-data-analytics-certifications/">CareerFoundry</a></b> to supplement my marketing degree would be a perfect career enhancement where I see myself excelling. Applying mathematical calculations and performing extended research studies to feed one’s curiosity deepens my desire to gain knowledge.</i></p>
 									<p align="justify"><i>Big data has been increasingly accessible in our modern world and competency is very critical. Through my perseverance paired with accumulated technical skills, I am eager to unfold insights that will help others grow. I'm an adaptive and resourceful learner that thrives in fast-paced and goal-driven environments. I see obstacles as an opportunity for improvement or better yet, a favorable evolution. I enjoy simplifying complex problems and being part of the solution. My ambition is to add value to an organization through forward-thinking while utilizing technological advancements.</i></p>
 									<p align="justify"><i>Currently, I'm available for a full-time position either local or remote.</i></p> 
-									<ul> 
-									<a href="images/Resume GSkelley.pdf" download>
+									<ul>
+									<a href="images/Resume GSkelley.pdf" download> 
 									<button type="button" class="button" style="background-color:#4acaa8;height:40px;width:150px;font-size:12px;text-align:center;"  data-download="download">Download Resume</button></a>
-									</ul>	
+									</ul>
 								</div>
 							</section>
 
@@ -155,6 +154,7 @@
 									</form>
 								</div>
 							</section>
+
 
 						<!-- Five -->
 						<!--
