--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/graceskelley/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/gskelley" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="images/Resume GSkelley.pdf" class="icon fa fa-download fa-file-alt"><span class="label">Resume</span></a></li>
+						<li><a href="images/Resume GSkelley.pdf" class="icon solid fa-file-alt"><span class="label">Resume</span></a></li>
 						<li><a href="#four" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
