--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p align="justify">For a complete and detailed anaylsis presentation, it is recommended to select "<b><i>View the Full Report Below"</i></b>" links provided when visiting each of the case study excerpts.</p>									
+									<p align="justify">For a complete and detailed anaylsis presentation, it is recommended to select "<b><i>View the Full Report Below</i></b>" links provided when visiting each of the case study excerpts.</p>									
 									<div class="features">
 										<article>
 											<a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Instacart.jpg" alt="" /></a>
