--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 											</div>
 										</article>
 									<article>
-											<a href="#" class="image"><img src="images/work_in_progress.jpg" alt="" /></a>
+											<a href="Case Studies/Project X - GSkelley Online Portfolio.pdf" class="image"><img src="images/work_in_progress.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Project X</h4>
 												<p align="justify">Coming soon...</p>
