--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type="image/png" sizes="64x64" href="images/logo.png">
+		<link rel="shortcut icon" type="image/png" sizes="64x64" href="images/logo.png">
 	</head>
 	<body class="is-preload">
 
