--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Welcome</a></li>
+						<li><a href="#one" class="active">Intro</a></li>
 						<li><a href="#two">About Me</a></li>
 						<li><a href="#three">Projects</a></li>
 						<li><a href="#four">Contact</a></li>
