--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br />
 					 </p>
@@ -93,7 +92,7 @@
 										<article>
 											<a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Instacart.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Instacart Online Grocery</h4>
+												<h4><a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf">Instacart Online Grocery</h4></a>
 												<p align="justify">A curious real-life organization that wants to learn about sales trends and consumer behavior to assist management in developing strategic promotional efforts.</p>
 												<p>Tools: Python, Jupyter Notebook, Excel</p>
 											</div>
@@ -101,7 +100,7 @@
 										<article>
 											<a href="Case Studies/Rockbuster Stealth Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Rockbuster.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Rockbuster Stealth</h4>
+												<h4><a href="Case Studies/Rockbuster Stealth Case Study - GSkelley Online Portfolio.pdf">Rockbuster Stealth</h4></a>
 												<p align="justify">A fictional company interested in understanding international business developments of their online video rental services to acquire new product launch marketing insights.</p>
 												<p>Tools: SQL, Excel, PowerPoint, Tableau</p>
 											</div>
@@ -109,7 +108,7 @@
 										<article>
 											<a href="Case Studies/Influenza Medical Staffing Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Influenza.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Influenza Medical Staffing</h4>
+												<h4><a href="Case Studies/Influenza Medical Staffing Case Study - GSkelley Online Portfolio.pdf">Influenza Medical Staffing</h4></a>
 												<p align="justify">A predictive analysis on influenza historical trends that aims to assist the medical staffing agency with effectively allocating their workforce within the US in preparation for the upcoming season.</p>
 											    <p>Tools: Excel, Tableau</p>
 											</div>
@@ -117,7 +116,7 @@
 										<article>
 											<a href="Case Studies/Gameco Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Gameco.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>GameCo</h4>
+												<h4><a href="Case Studies/Gameco Case Study - GSkelley Online Portfolio.pdf">GameCo</h4></a>
 												<p align="justify">A global marketing analysis for a fictious newcomer in the gaming console industry providing data-driven information for their budget planning.</p>
 											    <p>Tools: Excel, PowerPoint</p>
 											</div>
@@ -125,7 +124,7 @@
 									<article>
 											<a href="Case Studies/Project X - GSkelley Online Portfolio.pdf" class="image"><img src="images/work_in_progress.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Project X</h4>
+												<h4><a href="Case Studies/Project X - GSkelley Online Portfolio.pdf">Project X</h4></a>
 												<p align="justify">Coming soon...</p>
 											    <p> </p>
 											</div>
