--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
+					<span class="image avatar"><img src="images/me.JPG" alt="me" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br />
 					 </p>
@@ -121,7 +122,15 @@
 											    <p>Tools: Excel, PowerPoint</p>
 											</div>
 										</article>
-									<article>
+										<article>
+											<a href="Case Studies/Pig E Bank Case Study - GSkelley.pdf" class="image"><img src="images/Bank-Cover.png" alt="" /></a>
+											<div class="inner">
+												<h4><a href="Case Studies/Pig E Bank Case Study - GSkelley.pdf">Pig E Bank</h4></a>
+												<p align="justify">A predictive analysis on customer retention risk for Global Finance Service Company.</p>
+											    <p>Tools: Excel, Word</p>
+											</div>
+										</article>
+									    <article>
 											<a href="Case Studies/Project X - GSkelley Online Portfolio.pdf" class="image"><img src="images/work_in_progress.jpg" alt="" /></a>
 											<div class="inner">
 												<h4><a href="Case Studies/Project X - GSkelley Online Portfolio.pdf">Project X</h4></a>
