--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 											</div>
 										</article>
 										<article>
-											<a href="Case Studies/Pig E Bank Case Study - GSkelley.pdf" class="image"><img src="images/Bank-Cover.png" alt="" /></a>
+											<a href="Case Studies/Pig E Bank Case Study - GSkelley Online Portfolio.pdf.pdf" class="image"><img src="images/Bank-Cover.png" alt="" /></a>
 											<div class="inner">
-												<h4><a href="Case Studies/Pig E Bank Case Study - GSkelley.pdf">Pig E Bank</h4></a>
+												<h4><a href="Case Studies/Pig E Bank Case Study - GSkelley Online Portfolio.pdf.pdf">Pig E Bank</h4></a>
 												<p align="justify">A predictive analysis on customer retention risk for Global Finance Service Company.</p>
 											    <p>Tools: Excel, Word</p>
 											</div>
