--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 											<a href="Case Studies/Pig E Bank Case Study - GSkelley Online Portfolio.pdf.pdf" class="image"><img src="images/Bank-Cover.png" alt="" /></a>
 											<div class="inner">
 												<h4><a href="Case Studies/Pig E Bank Case Study - GSkelley Online Portfolio.pdf.pdf">Pig E Bank</h4></a>
-												<p align="justify">A predictive analysis on customer retention risk for Global Finance Service Company.</p>
+												<p align="justify">A hypothetical global financial organization requires analytical support within its division responsible for ensuring adherence to anti-money laundering laws.</p>
 											    <p>Tools: Excel, Word</p>
 											</div>
 										</article>
