--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 									    <article>
 											<a href="Case Studies/Worlds Largest Public Companies - GSkelley Online Portfolio.pdf" class="image"><img src="images/bldgs.jpg" alt="" /></a>
 											<div class="inner">
-												<h4><a href="Case Studies/Worlds Largest Public Companies - GSkelley Online Portfolio.pdf">Project X</h4></a>
+												<h4><a href="Case Studies/Worlds Largest Public Companies - GSkelley Online Portfolio.pdf">World's Largest Public Companies</h4></a>
 												<p align="justify">Analysis on the success of leading industries between 2008 and 2022, utilizing key performance indicators (KPIs), to ascertain effective operational approaches and understand the influence of COVID-19 on business practices.</p>
-											    <p> </p>
+											    <p>Tools: Python, Jupyter Notebook, Tableau, Excel</p>
 											</div>
 										</article>
 									</div>
