--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 									<header class="major">
 										<h2>Welcome to my Portfolio</h2>
 									</header>
-									<p>I am delighted to present my project compilation, demonstrating my skills in data analysis, interpretation, and the best part of all, visualization.<br />
+									<p>I am thrilled to have this opportunity to showcase my project compilation, highlighting my expertise in data analysis, interpretation, and the art of visualization.<br />
 										</a></p>
-									<p>Thank you for taking a moment to view some of my accomplishments and I hope you like it.</p>
+									<p>Thank you for taking the time to explore some of my noteworthy accomplishments. I sincerely hope you find them impressive and engaging.</p>
 								</div>
 							</section>
 
