--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/me.JPG" alt="me" /></span>
+					<span class="image avatar"><img src="" alt="" /></span>
 					<h1 id="logo"><a href="#two">Grace Skelley</a></h1>
 					<p>Business Intelligence Analyst<br />
 					 </p>
@@ -69,7 +69,7 @@
 										<h2>Welcome to my Portfolio</h2>
 									</header>
 									
-									<p align="justify"><i>Hello! I'm Grace Skelley, a certified data analyst through the <a href="https://www.forbes.com/advisor/business/best-data-analytics-certifications/">CareerFoundry</a></b> Program specializing  in business operations based in Northern California.</i></p>
+									<p align="justify"><i>Hello! I'm Grace Skelley, a certified data analyst through the <a href="https://www.forbes.com/advisor/business/best-data-analytics-certifications/">CareerFoundry</a></b> Program specializing in operational optimization based in Northern California.</i></p>
 									<p align="justify"><i>My passion for innovative solutions extends benefits to both individuals and organizations. I view change as an opportunity for limitless possibilities, and a chance to optimize operational efficiency through data-driven methodology. Big data has been increasingly accessible in our modern world and competency is very critical. Through my perseverance paired with accumulated technical skills, I am eager to unfold insights that will help others grow.</i></p>
 									<p align="justify"><i>I'm an adaptive and resourceful learner that thrives in fast-paced and goal-driven environments. I enjoy simplifying complex problems and being part of the solution. My ambition is to add value to an organization through forward-thinking while utilizing technological advancements.</i></p>
 									<p align="justify"><i>Currently, I'm available for a full-time position either local or remote.</i></p> 
