--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 											<div class="inner">
 												<h4><a href="Case Studies/Gameco Case Study - GSkelley Online Portfolio.pdf">GameCo</h4></a>
 												<p align="justify">A global marketing analysis for a fictious newcomer in the gaming console industry providing data-driven information for their budget planning.</p>
-											    <p align="justify"><b>Role:</b> Perform descriptive analysis on market trends and games preferences for product development to formulate new entrant strategies.</p>
+											    <p align="justify"><b>Role:</b> Performed descriptive analysis on market trends and games preferences for product development to formulate new entrant strategies.</p>
 												<p><b>Tools:</b> Excel, PowerPoint</p>
 											</div>
 										</article>
@@ -136,7 +136,7 @@
 											<div class="inner">
 												<h4><a href="Case Studies/Pig E Bank Case Study - GSkelley Online Portfolio.pdf">Pig E. Bank</h4></a>
 												<p align="justify">A hypothetical global financial organization requires analytical support within its division responsible for ensuring adherence to anti-money laundering laws.</p>
-											    <p align="justify"><b>Role:</b> Perform customer retention and predictive model analyses for risk mitigation of anti-money laundering of the financial institution.</p>
+											    <p align="justify"><b>Role:</b> Performed customer retention and predictive model analyses for risk mitigation of anti-money laundering of the financial institution.</p>
 												<p><b>Tools:</b> Excel, Word</p>
 											</div>
 										</article>									    
