--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							<section id="three">
 								<div class="container">
 									<h3>Projects</h3>
-									<p align="justify">For a complete and detailed anaylsis presentation, it is recommended to select "<b><i>View the Full Report Below</i></b>" links provided when visiting each of the case study excerpts.</p>									
+									<p align="justify">Explore the complete analysis by clicking the "<b><i>CLICK LINKS BELOW TO VIEW FULL REPORTS</i></b>" hyperlink beneath each excerpt.</p>									
 									<div class="features">
 										<article>
 											<a href="Case Studies/Instacart Online Grocery Case Study - GSkelley Online Portfolio.pdf" class="image"><img src="images/Instacart.jpg" alt="" /></a>
@@ -530,3 +530,4 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 	</body>
 </html>
+
